--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <string name="app_name">BakingApp</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="error_message">Error getting data</string>
     <string name="step_number">%1$s. %2$s</string>
     <string name="step_number2">%1$s. %2$s</string>
     <string name="title_ingredients">Ingredients</string>
