--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,8 @@
     <string name="title_ingredients">Ingredients</string>
     <string name="title_activity_step">StepActivity</string>
     <string name="show_video">Video</string>
+    <string name="appwidget_text">Ingredients</string>
+    <string name="add_widget">Add widget</string>
+    <string name="addToWidget">Add to widget</string>
 
 </resources>
